# amplifier-builder-coach

./: .gitignore  LICENSE  README.md  bundle.md  pyproject.toml
agents/: coaching-agent.md  coaching-storyteller.md
behaviors/: coaching.yaml
context/: coach-instructions.md  growth-framework.md
data/: growth-journal.md
docs/: BACKLOG.md  CONSTITUTION.md  builder-coach-deck.html  patentability-assessment.md
docs/plans/: 2026-03-11-builders-mirror-design.md  2026-03-11-builders-mirror-implementation.md  2026-03-12-coaching-storyteller-design.md  2026-03-12-coaching-storyteller-plan.md  2026-03-12-session-history-analyzer-design.md  2026-03-12-session-history-analyzer-plan.md
recipes/: session-history-analyzer.yaml  session-nudge.yaml  weekly-retrospective.yaml
scripts/: crontab.txt  entrypoint.sh
specs/: 001-session-file-discovery.md  002-journal-entry-parser.md  003-growth-chart-renderer.md  004-report-store.md  005-session-event-extractor.md  006-evidence-combiner.md  007-historical-trend.md  008-nudge-generator.md
src/builder_coach/: __init__.py  evidence.py  growth_chart.py  historical.py  journal_parser.py  nudge.py  report_store.py  session_discovery.py  session_extractor.py
tests/: test_bundle_structure.py  test_coaching_agent.py  test_evidence.py  test_growth_chart.py  test_growth_framework.py  test_historical.py  test_journal_parser.py  test_nudge.py  test_recipe_schema.py  test_report_store.py  test_session_discovery.py  test_session_extractor.py  test_session_history_analyzer_recipe.py
